Update to Jmix 2.4.0